--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
                 
 	<a href="https://news.artnet.com/art-world/machine-dazzle-treasure-queer-maximalism-2199659" class="teaser-image" >
 		<div class="image-wrapper">
-			<img src="./top/images/girl-2696947_640.jpg"
+			<img src="./images/Dil Garden Ho Gaya - On my way (1).jpg"
 				 width="750"
 				 height="550" />
 
@@ -512,7 +512,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
                 
 	<a href="https://news.artnet.com/art-world/rishi-sunak-art-market-2199797" class="teaser-image" >
 		<div class="image-wrapper">
-			<img src="./top/images/news business.jpg"
+			<img src="./images/Tsunami.jpg"
 				 width="750"
 				 height="550" />
 
