--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>Artnet News | The Global Art Market Newswire</title>
+    <title>Hyperglot Review</title>
 
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
 	<meta name="description" content="Find out what is driving the international art market around the clock with daily art world news, expert commentary, and event reviews." />
@@ -206,9 +206,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
         <div class="col-sm-6">
                         <nav id="nav-header-right" class="nav-header pull-right" role="navigation" style="display:none">
                 <ul class="list-inline list-text">
-		<li class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-530417">
-					<a href="http://artnetnews.cn" target="_blank">中文</a>
-					</li>
+		
 	</ul>
             </nav>
                     </div>
@@ -291,143 +289,143 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
                         <nav id="nav-main" class="nav-main nav navbar-nav" role="navigation">
                             <ul class="list-inline list-text">
 								<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962144">
-		<a href="https://news.artnet.com" target="_self">Home</a>
+		<a href="#" target="_self">Home</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530447 menu-item-has-children">
-					<a href="https://news.artnet.com/art-world" target="_self">Art World</a>
+					<a href="" target="_self">Art World</a>
 				<ul class="list-unstyled">
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962144">
-		<a href="https://news.artnet.com/art-world/archaeology" target="_self">Archaeology</a>
+		<a href="" target="_self">Archaeology</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962148">
-		<a href="https://news.artnet.com/art-world/museums" target="_self">Museums</a>
+		<a href="#" target="_self">Museums</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964418">
-		<a href="https://news.artnet.com/art-world/exhibitions" target="_self">Shows &amp; Exhibitions</a>
+		<a href="#" target="_self">Shows &amp; Exhibitions</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530456">
-		<a href="https://news.artnet.com/art-world/art-law" target="_self">Law</a>
+		<a href="#" target="_self">Law</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530459">
-		<a href="https://news.artnet.com/art-world/politics" target="_self">Politics</a>
+		<a href="#" target="_self">Politics</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964410">
-		<a href="https://news.artnet.com/art-world/crime" target="_self">Crime</a>
+		<a href="#" target="_self">Crime</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530450">
-		<a href="https://news.artnet.com/art-world/people" target="_self">People</a>
+		<a href="#" target="_self">People</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964412">
-		<a href="https://news.artnet.com/art-world/science-tech" target="_self">Science &amp; Tech</a>
+		<a href="#" target="_self">Science &amp; Tech</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964409">
-		<a href="https://news.artnet.com/art-world/books" target="_self">Books</a>
+		<a href="#" target="_self">Books</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964411">
-		<a href="https://news.artnet.com/art-world/pop-culture" target="_self">Pop Culture</a>
+		<a href="#" target="_self">Pop Culture</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964408">
-		<a href="https://news.artnet.com/art-world/art-history" target="_self">Art History</a>
+		<a href="#" target="_self">Art History</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964413">
-		<a href="https://news.artnet.com/art-world/studio-visit" target="_self">Studio Visit</a>
+		<a href="#" target="_self">Studio Visit</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1993449">
-		<a href="https://news.artnet.com/art-world/travel" target="_self">Travel</a>
+		<a href="#" target="_self">Travel</a>
 			</li>
 	</ul>
 	</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530432 menu-item-has-children">
-					<a href="https://news.artnet.com/market" target="_self">Market</a>
+					<a href="#" target="_self">Market</a>
 				<ul class="list-unstyled">
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530441">
-		<a href="https://news.artnet.com/market/art-fairs" target="_self">Art Fairs</a>
+		<a href="#" target="_self">Art Fairs</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964414">
-		<a href="https://news.artnet.com/market/art-collectors" target="_self">Art Collectors</a>
+		<a href="#" target="_self">Art Collectors</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530435">
-		<a href="https://news.artnet.com/market/galleries" target="_self">Galleries</a>
+		<a href="#" target="_self">Galleries</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530438">
-		<a href="https://news.artnet.com/market/auctions" target="_self">Auctions</a>
+		<a href="#" target="_self">Auctions</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530444">
-		<a href="https://news.artnet.com/market/analysis" target="_self">Analysis</a>
+		<a href="#" target="_self">Analysis</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2044244">
-		<a href="https://news.artnet.com/market/nfts" target="_self">NFTs</a>
+		<a href="#" target="_self">NFTs</a>
 			</li>
 	</ul>
 	</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530474 menu-item-has-children">
-					<a href="https://news.artnet.com/opinion" target="_self">Opinion</a>
+			<a href="#" target="_self">Opinion</a>
 				<ul class="list-unstyled">
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962157">
-		<a href="https://news.artnet.com/opinion/op-ed" target="_self">Op-Ed</a>
+			<a href="#" target="_self">Op-Ed</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1973829">
-		<a href="https://news.artnet.com/opinion/know-your-rights" target="_self">Know Your Rights</a>
+			<a href="#" target="_self">Know Your Rights</a>
 			</li>
 	</ul>
 	</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962154">
-					<a href="https://news.artnet.com/style" target="_self">Style</a>
+			<a href="#" target="_self">Style</a>
 					</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962160 menu-item-has-children">
-					<a href="https://news.artnet.com/multimedia" target="_self">Multimedia</a>
+			<a href="#" target="_self">Multimedia</a>
 				<ul class="list-unstyled">
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962161">
-		<a href="https://news.artnet.com/multimedia/the-art-angle" target="_self">The Art Angle</a>
+			<a href="#" target="_self">The Art Angle</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962162">
-		<a href="https://news.artnet.com/multimedia/artnet-talks" target="_self">Artnet Talks</a>
+			<a href="#" target="_self">Artnet Talks</a>
 			</li>
 	</ul>
 	</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964568 menu-item-has-children">
-					<a href="https://news.artnet.com/news-pro" target="_self">Artnet News Pro</a>
+			<a href="#" target="_self">Artnet News Pro</a>
 				<ul class="list-unstyled">
 		<li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-2036247">
-		<a href="https://news.artnet.com/subscribe" target="_self">Subscribe</a>
+			<a href="#" target="_self">Subscribe</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1965792">
-		<a href="https://news.artnet.com/news-pro/the-gray-market" target="_self">The Gray Market</a>
+			<a href="#" target="_self">The Gray Market</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1965793">
-		<a href="https://news.artnet.com/news-pro/wet-paint" target="_self">Wet Paint</a>
+			<a href="#" target="_self">Wet Paint</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1969640">
-		<a href="https://news.artnet.com/news-pro/the-art-detective" target="_self">The Art Detective</a>
+			<a href="#" target="_self">The Art Detective</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1969639">
-		<a href="https://news.artnet.com/news-pro/kenny-schachter" target="_self">Kenny Schachter</a>
+			<a href="#" target="_self">Kenny Schachter</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1979106">
-		<a href="https://news.artnet.com/news-pro/the-hammer-news-pro" target="_self">The Hammer</a>
+			<a href="#" target="_self">The Hammer</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1976879">
-		<a href="https://news.artnet.com/news-pro/the-back-room" target="_self">The Back Room</a>
+			<a href="#" target="_self">The Back Room</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2124731">
-		<a href="https://news.artnet.com/news-pro/the-appraisal" target="_self">The Appraisal</a>
+			<a href="#" target="_self">The Appraisal</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2124732">
-		<a href="https://news.artnet.com/news-pro/ask-an-art-advisor" target="_self">Ask an Art Advisor</a>
+			<a href="#" target="_self">Ask an Art Advisor</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2011461">
-		<a href="https://news.artnet.com/market/the-intelligence-report" target="_self">The Intelligence Report</a>
+			<a href="#" target="_self">The Intelligence Report</a>
 			</li>
 	</ul>
 	</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1965614 menu-item-has-children">
-					<a href="https://news.artnet.com/buyers-guide" target="_self">Buyer's Guide</a>
+			<a href="#" target="_self">Buyer's Guide</a>
 				<ul class="list-unstyled">
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1967808">
-		<a href="https://news.artnet.com/buyers-guide/artnet-auctions" target="_self">Artnet Auctions</a>
+			<a href="#" target="_self">Artnet Auctions</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1965615">
-		<a href="https://news.artnet.com/buyers-guide/gallery-network" target="_self">Gallery Network</a>
+			<a href="#" target="_self">Gallery Network</a>
 			</li>
 	</ul>
 	</li>
