--- a/index.html
+++ b/index.html
@@ -193,12 +193,8 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
         <div class="col-sm-6">
                         <nav id="nav-header-left" class="nav-header pull-left" role="navigation">
                 <ul class="list-inline list-text">
-		<li class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-530411">
-					<a href="http://www.artnet.com" target="_blank">Milaap</a>
-					</li>
-		<li class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-530414">
-					<a href="https://www.artnet.com/auctions/" target="_blank">Milaap Auctions</a>
-					</li>
+		
+		
 	</ul>
             </nav>
                     </div>
@@ -213,9 +209,9 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
     </div>
 </div>
     <header id="header" class="header container">
-        <div class="logo-container">
-            <a class="logo-link" href="/" rel="home">
-				<img src="./top/images/Milaap logo - White BG (1).png" alt="Artnet News" />
+        <div class="logo-container" >
+            <a class="logo-link" href="/" rel="home" style="width:10% !important ; margin:0px; padding:0px;">
+				<img src="./images/Hyperglot Review updated.png" alt="" style="width:100% !important ;" />
             </a>
         </div>
         <div class="main">
@@ -292,141 +288,79 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 		<a href="#" target="_self">Home</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530447 menu-item-has-children">
-					<a href="" target="_self">Art World</a>
+					<a href="" target="_self">Art</a>
 				<ul class="list-unstyled">
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962144">
-		<a href="" target="_self">Archaeology</a>
+		<a href="" target="_self"> Featured artists</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962148">
-		<a href="#" target="_self">Museums</a>
+		<a href="#" target="_self">Spotlight</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964418">
-		<a href="#" target="_self">Shows &amp; Exhibitions</a>
+		<a href="#" target="_self">Women Artist</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530456">
-		<a href="#" target="_self">Law</a>
+		<a href="#" target="_self">Emerging Artist</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530459">
-		<a href="#" target="_self">Politics</a>
+		<a href="#" target="_self">News & Events</a>
 			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964410">
-		<a href="#" target="_self">Crime</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530450">
-		<a href="#" target="_self">People</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964412">
-		<a href="#" target="_self">Science &amp; Tech</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964409">
-		<a href="#" target="_self">Books</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964411">
-		<a href="#" target="_self">Pop Culture</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964408">
-		<a href="#" target="_self">Art History</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964413">
-		<a href="#" target="_self">Studio Visit</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1993449">
-		<a href="#" target="_self">Travel</a>
-			</li>
+	
 	</ul>
 	</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530432 menu-item-has-children">
-					<a href="#" target="_self">Market</a>
+					<a href="#" target="_self">  Literature</a>
 				<ul class="list-unstyled">
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530441">
-		<a href="#" target="_self">Art Fairs</a>
+		<a href="#" target="_self">Featured authors</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964414">
-		<a href="#" target="_self">Art Collectors</a>
+		<a href="#" target="_self">Spotlight</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530435">
-		<a href="#" target="_self">Galleries</a>
+		<a href="#" target="_self">Women authors</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530438">
-		<a href="#" target="_self">Auctions</a>
+		<a href="#" target="_self">Emerging authors</a>
 			</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530444">
-		<a href="#" target="_self">Analysis</a>
+		<a href="#" target="_self">News & Events</a>
 			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2044244">
-		<a href="#" target="_self">NFTs</a>
-			</li>
+		
 	</ul>
 	</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530474 menu-item-has-children">
-			<a href="#" target="_self">Opinion</a>
+			<a href="#" target="_self">Science & Tech</a>
 				<ul class="list-unstyled">
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962157">
-			<a href="#" target="_self">Op-Ed</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1973829">
-			<a href="#" target="_self">Know Your Rights</a>
-			</li>
+	
 	</ul>
 	</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962154">
-			<a href="#" target="_self">Style</a>
+			<a href="#" target="_self">Pop Culture</a>
 					</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962160 menu-item-has-children">
-			<a href="#" target="_self">Multimedia</a>
+			<a href="#" target="_self">Travel</a>
 				<ul class="list-unstyled">
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962161">
-			<a href="#" target="_self">The Art Angle</a>
+			<a href="#" target="_self"></a>
 			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1962162">
-			<a href="#" target="_self">Artnet Talks</a>
-			</li>
+		
 	</ul>
 	</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1964568 menu-item-has-children">
-			<a href="#" target="_self">Artnet News Pro</a>
-				<ul class="list-unstyled">
-		<li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-2036247">
-			<a href="#" target="_self">Subscribe</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1965792">
-			<a href="#" target="_self">The Gray Market</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1965793">
-			<a href="#" target="_self">Wet Paint</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1969640">
-			<a href="#" target="_self">The Art Detective</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1969639">
-			<a href="#" target="_self">Kenny Schachter</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1979106">
-			<a href="#" target="_self">The Hammer</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1976879">
-			<a href="#" target="_self">The Back Room</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2124731">
-			<a href="#" target="_self">The Appraisal</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2124732">
-			<a href="#" target="_self">Ask an Art Advisor</a>
-			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2011461">
-			<a href="#" target="_self">The Intelligence Report</a>
-			</li>
-	</ul>
-	</li>
+		
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1965614 menu-item-has-children">
-			<a href="#" target="_self">Buyer's Guide</a>
+			<a href="#" target="_self">Opinion</a>
 				<ul class="list-unstyled">
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1967808">
-			<a href="#" target="_self">Artnet Auctions</a>
+	</ul>
+	</li>
+	<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1965614 menu-item-has-children">
+		<a href="#" target="_self">About us</a>
+			<ul class="list-unstyled">
+		</ul>
 			</li>
-		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1965615">
-			<a href="#" target="_self">Gallery Network</a>
-			</li>
+	<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1965614 menu-item-has-children">
+		<a href="#" target="_self">  Follow us</a>
+		<ul class="list-unstyled">
 	</ul>
 	</li>
 	</ul>
