--- a/Artist Dipankar Ray.html
+++ b/Artist Dipankar Ray.html
@@ -210,8 +210,8 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 </div>
     <header id="header" class="header container">
         <div class="logo-container" >
-            <a class="logo-link" href="/" rel="home" style="width:10% !important ; margin:0px; padding:0px;">
-				<img src="./images/Hyperglot Review updated.png" alt="" style="width:100% !important ;" />
+             <a class="logo-link" href="/" rel="home" style="width:10% !important ; margin:0px; padding:0px;">
+				<img src="./images/Hyperglot Review updated.png" alt="" style="width:100% !important ; height:120% !important;" />
             </a>
         </div>
         <div class="main">
