--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
                     </div>
     </div>
 </div>
-    <header id="header" class="header container">
-        <div class="logo-container" >
+    <header id="header" class="header container" style="height:190% !important">
+        <div class="logo-container" style=" margin:0px; padding:0px;">
             <a class="logo-link" href="/" rel="home" style="width:10% !important ; margin:0px; padding:0px;">
-				<img src="./images/Hyperglot Review updated.png" alt="" style="width:100% !important ;" />
+				<img src="./images/Hyperglot Review updated.png" alt="" style="width:100% !important ; height:120% !important;" />
             </a>
         </div>
         <div class="main">
