--- a/Artist chandan das.html
+++ b/Artist chandan das.html
@@ -208,7 +208,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
     </div>
 </div>
     <header id="header" class="header container">
-        <div class="logo-container" >
+         <div class="logo-container" style=" margin:0px; padding:0px;">
              <a class="logo-link" href="/" rel="home" style="width:10% !important ; margin:0px; padding:0px;">
 				<img src="./images/Hyperglot Review updated.png" alt="" style="width:100% !important ; height:120% !important;" />
             </a>
