--- a/Artist Dipankar Ray.html
+++ b/Artist Dipankar Ray.html
@@ -105,6 +105,11 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 
 			 
 <link rel="icon" type="image/x-icon" href="./images/Hyperglot Logo Tag.png">
+<style>
+    .artistDiscover :hover{
+        text-decoration: none !important;
+    }
+</style>
 				</head>
 	
 		<body class="home blog wp-custom-logo " id="body">
