--- a/index.html
+++ b/index.html
@@ -101,10 +101,25 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 	<script type="text/javascript">var sailthru_vars = {"ajaxurl":"https:\/\/news.artnet.com\/wp\/wp-admin\/admin-ajax.php"}</script>            <script type="application/ld+json">
                 []            </script>
                 <link rel="icon" type="image/x-icon" href="./images/Hyperglot Logo Tag.png">
+<style>
+    .artistDiscover :hover{
+        text-decoration: none !important;
+    }
+</style>
 
 <link rel="icon" type="image/x-icon" href="./images/Hyperglot Logo Tag.png">
+<style>
+    .artistDiscover :hover{
+        text-decoration: none !important;
+    }
+</style>
 			 
 <link rel="icon" type="image/x-icon" href="./images/Hyperglot Logo Tag.png">
+<style>
+    .artistDiscover :hover{
+        text-decoration: none !important;
+    }
+</style>
 				</head>
 	
 		<body class="home blog wp-custom-logo " id="body">
