--- a/index.html
+++ b/index.html
@@ -456,8 +456,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 	<a href="#" class="teaser-image" >
 		<div class="image-wrapper">
 			<img src="./images/Ceramic.jpg " 
-				 width="750"
-				 height="550" />
+				Style="width:450px !important;height:400px !important;"/>
 
 					</div>
 	</a>
