--- a/Artist Prolay Kundu.html
+++ b/Artist Prolay Kundu.html
@@ -387,7 +387,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
         </div>
         <div class="mobile-logo-container">
             <a class="mobile-logo-link" href="/" rel="home">
-                <img src="https://news.artnet.com/app/themes/artnet-news/assets/img/logo.svg" alt="Artnet News" />
+               <img src="./images/Hyperglot Review updated.png" alt="" />
             </a>
         </div>
     </header>
