--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 	</a>
 		<div class="teaser-info">
 		<h5 class="teaser-category h5">
-							<a href="./Artist Soumen saha.html" ></a>
+							<a href="./Artist Soumen saha.html" >Art</a>
 											</h5>
         <a href="./Artist Soumen saha.html" >
 			<h2 class="teaser-title h2">Soumen Basu</h2>
