--- a/index.html
+++ b/index.html
@@ -426,7 +426,9 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 
 					</div>
 	</a>
-		<div class="teaser-info">
+	
+		
+	        <div class="teaser-info"> <br><br><br>
 		<h5 class="teaser-category h5">
 							<a href="./Artist Amit Kumar Saha.html" >Amit Kumar Saha</a>
 											</h5>
@@ -459,7 +461,8 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 
 					</div>
 	</a>
-		<div class="teaser-info">
+	        
+		<div class="teaser-info"> <br><br><br>
 		<h5 class="teaser-category h5">
 							<a href="#" >Politics</a>
 											</h5>
@@ -606,8 +609,8 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 
 					</div>
 	</a>
-	<br>
-		<div class="teaser-info">
+	
+		<div class="teaser-info"> <br>
 		<h5 class="teaser-category h5">
 							<a href="#" >Women Artist </a>
 											</h5>
