--- a/index.html
+++ b/index.html
@@ -422,13 +422,13 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 	<a href="./Artist Amit Kumar Saha.html" class="teaser-image" >
 		<div class="image-wrapper">
 			<img src="./images/Dil Garden Ho Gaya - On my way (1).jpg"
-            Style="width:100% !important;height:100% !important;"/>
+            Style="width:100% !important;height:100% !important;"/> <br><br><br>
 
 					</div>
 	</a>
 	
 		
-	        <div class="teaser-info"> <br><br><br>
+	        <div class="teaser-info"> 
 		<h5 class="teaser-category h5">
 							<a href="./Artist Amit Kumar Saha.html" >Amit Kumar Saha</a>
 											</h5>
@@ -457,12 +457,12 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 	<a href="#" class="teaser-image" >
 		<div class="image-wrapper">
 			<img src="./images/Ceramic.jpg " 
-				Style="width:100% !important;height:100% !important;"/>
+				Style="width:100% !important;height:100% !important;"/><br><br><br>
 
 					</div>
 	</a>
 	        
-		<div class="teaser-info"> <br><br><br>
+		<div class="teaser-info"> 
 		<h5 class="teaser-category h5">
 							<a href="#" >Politics</a>
 											</h5>
