--- a/index.html
+++ b/index.html
@@ -883,13 +883,13 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
                     
 	<a href="./Artist Indira Halder.html"  >
 		<div class="image-wrapper" class="" style="display: flex; flex-direction: row;">
-            <img src="./images/They Are - II, Acrylic on Canvas, 12 x 32 inch (1).jpg" style="width: 70%; margin-right: 2%;">
-            <img src="./images/Title -Inviting Sea Change.jpg" style="width: 40%;">
+            <img src="./images/They Are - II, Acrylic on Canvas, 12 x 32 inch (1).jpg" style="width: 60%; margin-right: 3%;">
+            <img src="./images/Title -Inviting Sea Change.jpg" style="width: 35%;">
 				
 
 					</div>
 	</a>
-                <div class="teaser-info">
+                <div class="teaser-info"><br>
                 <h5 class="teaser-category h5">
                                     <a href="#" >Women Artist </a>
                                                     </h5>
