--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
                 
 	<a href="./Artist Soumen saha.html" class="teaser-image" >
 		<div class="image-wrapper">
-			<img src="./images/Seaweed III (2).jpg" 
+			<img src="./images/The Farn.jpg" 
             style="width:320px !important; height:150px !important ; " />
 
 					</div>
