--- a/Artist Kuntal Dutta.html
+++ b/Artist Kuntal Dutta.html
@@ -425,7 +425,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 
 													<figure class="article-image">
 								<img src="./images/town6.jpg_acrylic on canvas_36x48inc_AP rs 45000 (1) (1).jpg" alt="" title=""style="width:72%;" /><br>
-                                <b>TOWN 6</b><br>
+                            <br>    <b>TOWN 6 </b> <br>
 
 <b> Dimensions: </b>36 in × 48 in
 <br>
