Update Artist Kuntal Dutta.html

--- a/Artist Kuntal Dutta.html
+++ b/Artist Kuntal Dutta.html
@@ -424,12 +424,12 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 						</div>
 
 													<figure class="article-image">
-								<img src="./images/town6.jpg_acrylic on canvas_36x48inc_AP rs 45000 (1) (1).jpg" alt="" title=""style="width:72%;" /><br>
+								<img src="./images/town6.jpg_acrylic on canvas_36x48inc_AP rs 45000 (1) (1).jpg" alt="" title=""style="width:72%;" /> <br>
                             <br>    <b>TOWN 6 </b> <br>
 
 <b> Dimensions: </b>36 in × 48 in
 <br>
-<b>Medium: Acrylic on canvas </b>
+<b>Medium:</b> Acrylic on canvas 
 
 
 							
