Update Artist Kuntal Dutta.html

--- a/Artist Kuntal Dutta.html
+++ b/Artist Kuntal Dutta.html
@@ -502,7 +502,8 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 													<figure class="article-image">
 								<img src="./images/town  with full moon .jpg_acrylic on canvas_Ap  rs 30000 (1).jpg" alt="" title=""style="width: 69%;" />
 														
-														<br> <b> TOWN WITH FULL MOON </b>
+														<br>
+														<b> TOWN WITH FULL MOON </b>
 <br>
 														<b> Dimensions: </b>24 in × 24 in <br>
 														<b> Medium:</b> Acrylic on canvas<br>
@@ -688,7 +689,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 													<br>	<b> BIRD DRAWING</b>
 <br>
 														<b> Dimensions: </b> 8.5 in × 11.5 in <br>
-<b>Medium: </b> Ink on normal paper<br>
+<b>Medium:</b> Ink on normal paper <br>
 
 
 								
