Update Artist Soumen saha.html

--- a/Artist Soumen saha.html
+++ b/Artist Soumen saha.html
@@ -717,7 +717,7 @@ creating a new form of cosmic force.
                                     <b>Medium:</b> Ceramic<br>
                                     <b>Year:</b> 2020</p>
                                     <p style="text-align: center; margin-left: 15% !important;"><b>Seaweed III</b><br>
-                                        <b>Dimensions:</b> 38’’ X 11’’ X11”<br>
+                                        <b>Dimensions:</b> 38in X 11in X11in<br>
                                         <b>Medium:</b> Ceramic with Iron Bowl & Nut Bolts<br>
                                         <b>Year:</b> 2018</p>
                             </div>
