Update Artist Soumen saha.html

--- a/Artist Soumen saha.html
+++ b/Artist Soumen saha.html
@@ -524,7 +524,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 
 													<figure class="article-image">
 							<img src="./images/Untitled 7.jpg" alt="" title="" style="width: 50% !important; height: 550px !important;" /><br>
-														<p style="text-align: center;"> <b>Untitled 7</b><br>	
+														<br><p style="text-align: center;"> <b>Untitled 7</b><br>	
 					<b>Dimensions:</b> 42in X 26in X 6in<br>
                                 <b>Medium:</b> Ceramic<br>
                                 <b>Year:</b> 2020<br>
@@ -588,7 +588,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
                                    <b>Dimensions:</b> 40in X 24in X 12in<br>
                                    <b>Medium:</b> Ceramic<br>
                                    <b>Year:</b> 2020</p>
-                                    <p style="text-align: center;"> <b>Tree</b><br>
+                                    <p style="text-align: center:20%;"> <b>Tree</b><br>
                                         <b>Dimensions:</b> 32in X 14in X 8in<br>
                                         <b>Medium:</b> Ceramic with Brass<br>
                                         <b>Year:</b> 2020</p>
@@ -716,7 +716,7 @@ creating a new form of cosmic force.
                                     <b>Dimensions:</b> 18in X 20in X 10in<br>
                                     <b>Medium:</b> Ceramic<br>
                                     <b>Year:</b> 2020</p>
-                                    <p style="text-align: center; margin-left: 15% !important;"><b>Seaweed III</b><br>
+                                    <p style="text-align: center; margin-left: 20% !important;"><b>Seaweed III</b><br>
                                         <b>Dimensions:</b> 38in X 11in X11in<br>
                                         <b>Medium:</b> Ceramic with Iron Bowl & Nut Bolts<br>
                                         <b>Year:</b> 2018</p>
@@ -752,7 +752,7 @@ creating a new form of cosmic force.
                                     <b>Dimensions:</b> 34in X 28in X 7in <br>
                                     <b>Medium:</b> Ceramic with Terracotta<br> 
                                     <b>Year:</b> 2020 </p>
-                                    <p style="text-align: center; margin-left: 15% !important;">The Farn <br>
+                                    <p style="text-align: center; margin-left: 15% !important;"><b>The Farn</b> <br>
 					    <b>Dimension:</b> 39in X 20in X 10in <br>
                                         <b>Medium:</b> Ceramic <br>
 					    <b>Year:</b> 2019 <br>
