Update Artist Soumen saha.html

--- a/Artist Soumen saha.html
+++ b/Artist Soumen saha.html
@@ -588,7 +588,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
                                    <b>Dimensions:</b> 40in X 24in X 12in<br>
                                    <b>Medium:</b> Ceramic<br>
                                    <b>Year:</b> 2020</p>
-                                    <p style="text-align: center:20%;"> <b>Tree</b><br>
+                                    <p style="text-align: center;margin-left:50%"> <b>Tree</b><br>
                                         <b>Dimensions:</b> 32in X 14in X 8in<br>
                                         <b>Medium:</b> Ceramic with Brass<br>
                                         <b>Year:</b> 2020</p>
