--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
                         
             <a href="./Artist Dipankar Ray.html" class="teaser-image" >
                 <div class="image-wrapper">
-                    <img src="./images/An Immense World.jpg"
+                    <img src="./images/An Immense World 1.png"
                     style="width:320px !important; height:150px !important ; " />
         
                             </div>
