--- a/book big bang of number.html
+++ b/book big bang of number.html
@@ -230,58 +230,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
                             <span class="hamburger-inner"></span>
                           </span>
                         </button>
-                        <ul class="nav-right list-inline pull-right">
-                                                            <li class="follow-us dropdown hidden-sm hidden-xs">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                        Follow Us
-                                    </a>
-                                    <div class="dropdown-menu">
-                                        <nav id="nav-header-social" class="nav-header" role="navigation">
-                                            <ul class="list-inline list-icons">
-		<li>
-		<a href="https://www.facebook.com/artnetnews" title="Facebook" target="_blank">
-			<span class="fa fa-fw fa-facebook menu-item menu-item-type-custom menu-item-object-custom menu-item-530498"></span>
-			<span class="text">Facebook</span>
-		</a>
-			</li>
-		<li>
-		<a href="http://instagram.com/artnet" title="Instagram" target="_blank">
-			<span class="fa fa-fw fa-instagram menu-item menu-item-type-custom menu-item-object-custom menu-item-530510"></span>
-			<span class="text">Instagram</span>
-		</a>
-			</li>
-		<li>
-		<a href="https://twitter.com/artnet" title="Twitter" target="_blank">
-			<span class="fa fa-fw fa-twitter menu-item menu-item-type-custom menu-item-object-custom menu-item-530501"></span>
-			<span class="text">Twitter</span>
-		</a>
-			</li>
-		<li>
-		<a href="http://www.pinterest.com/artnet/" title="Pinterest" target="_blank">
-			<span class="fa fa-fw fa-pinterest-p menu-item menu-item-type-custom menu-item-object-custom menu-item-530507"></span>
-			<span class="text">Pinterest</span>
-		</a>
-			</li>
-		<li>
-		<a href="http://www.linkedin.com/company/artnet" title="LinkedIn" target="_blank">
-			<span class="fa fa-fw fa-linkedin-square menu-item menu-item-type-custom menu-item-object-custom menu-item-530516"></span>
-			<span class="text">LinkedIn</span>
-		</a>
-			</li>
-		<li>
-		<a href="http://weibo.com/artnet" title="Weibo" target="_blank">
-			<span class="fa fa-fw fa-weibo menu-item menu-item-type-custom menu-item-object-custom menu-item-530522"></span>
-			<span class="text">Weibo</span>
-		</a>
-			</li>
-	</ul>
-                                        </nav>
-                                    </div>
-                                </li>
-                                                        <li>
-                                <a href="/search/" class="search-toggle fa fa-search"></a>
-                            </li>
-                        </ul>
+                          
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -334,7 +283,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 	</ul>
 	</li>
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-530474 menu-item-has-children">
-			<a href="#" target="_self">Science & Tech</a>
+				<a href="./science and tech.html" target="_self">Science & Tech</a>
 				<ul class="list-unstyled">
 	
 	</ul>
@@ -353,7 +302,7 @@ var loginSettings = {"loginUrl":"https:\/\/news.artnet.com\/wp\/wp-login.php?red
 	</li>
 		
 		<li class=" menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1965614 menu-item-has-children">
-			<a href="#" target="_self">Opinion</a>
+		  <a href="./opinion.html" target="_self">Opinion</a>
 				<ul class="list-unstyled">
 	</ul>
 	</li>
